--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 dependencies:
   flutter_web: any
   flutter_web_ui: any
-  # bloc: ^0.14.4
+  rxdart: ^0.22.1
 
 dev_dependencies:
   build_runner: ^1.5.0
