--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   flutter_web: any
   flutter_web_ui: any
   rxdart: ^0.22.1
+  dio: ^2.1.13
 
 dev_dependencies:
   build_runner: ^1.5.0
@@ -17,10 +18,6 @@ dev_dependencies:
 
 dependency_overrides:
   flutter_web:
-    git:
-      url: https://github.com/flutter/flutter_web
-      path: packages/flutter_web
+    path: ../../../software/flutter_web/packages/flutter_web
   flutter_web_ui:
-    git:
-      url: https://github.com/flutter/flutter_web
-      path: packages/flutter_web_ui
+    path: ../../../software/flutter_web/packages/flutter_web_ui
